# AgentForFileCommands

./: .gitignore  README.md  config.yaml  pyproject.toml
src/: app.py
src/agents/: graph_agent.py  node_agent.py  supervisor_agent.py
src/controllers/: forfilecommands_controller.py
src/handlers/: forfilecommands_handler.py
src/llm/: __init__.py  openai.py
src/tools/: __init__.py  file_operations.py  file_search.py  file_utils.py  folder_operations.py
src/utils/: __init__.py  configuration_utils.py  logger_utils.py
test/: msg.py
tests/: test_routes.py
